# WordChecker

./: .bumpversion.cfg  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  tox.ini
docs/source/: conf.py  index.rst  modules.rst
docs/source/_files/_modules/: wordchecker.rst
notebooks/: analytics.ipynb
wordchecker/: .bumpversion.cfg  __init__.py  utils.py  wordchecker.py
