[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wordchecker"
description = "Um template para começar o desenvolvimento de apps"
readme = "README.md"
authors = [
    { name = "Eduardo Morais", email = "emdemor415@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]
keywords = ["template", "app"]
requires-python = ">=3.9"
dynamic = ["dependencies", "version"]

[tool.setuptools]
packages = ["wordchecker"]

[tool.setuptools.dynamic]
version = {attr = "wordchecker.__version__"}
dependencies = {file = ["requirements.txt"]}